@@ -1,0 +1,3 @@
+iconId=icon-m-crash-reporter
+previewIconId=icon-s-crash-reporter
+class=application
