@@ -5,3 +5,5 @@ usr/lib/duicontrolpanel/applets/*crash*.so*
 usr/lib/crash-reporter/dialogplugins/*
 usr/share/crash-reporter/*
 usr/share/man/man1/*
+usr/share/themes/base/meegotouch/icons/*
+usr/share/meegotouch/notifications/eventtypes/*
