@@ -129,8 +129,8 @@ bool CReporterSendAllDialogPlugin::requestDialog(const QVariantList &arguments)
     QString notificationBody = qtTrId("qtn_tap_to_send_or_delete_text");
 
     // Create new notification.
-    d_ptr->notification = new CReporterNotification("crash-reporter", notificationSummary,
-                                                              notificationBody);
+    d_ptr->notification = new CReporterNotification(CReporter::ApplicationNotificationEventType,
+                                                    notificationSummary, notificationBody);
     d_ptr->notification->setTimeout(60);
     d_ptr->notification->setParent(this);
 
